<resources>
    <string name="app_name">Formulario</string>

    <string name="nombres">Nombre:</string>
    <string name="apellidos">Apellidos:</string>
    <string name="edad">Edad:</string>
    <string name="correo">Correo:</string>
    <string name="aceptar">Aceptar</string>
    <string name="btnok">OK</string>

    <string name="custom_call">Llamar</string>
    <string name="custom_location">Ubicar</string>
    <string name="custom_web">Navegar</string>
    <string name="custom_camera">Capturar Imagen</string>
    <string name="chooser_title">Elegir Aplicación</string>
</resources>