<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MostrarDatos">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="DATOS"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvNombre"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/nombres"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvApellido"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/apellidos"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvEdad"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/edad"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvCorreo"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/correo"
            android:textSize="18sp" />


        <ImageView
            android:id="@+id/iv_picture"
            android:layout_width="match_parent"
            android:layout_height="247dp"
            android:contentDescription="@string/custom_camera"
            app:layout_constraintBottom_toTopOf="@+id/btn_camera"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <Button
            android:id="@+id/btnok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnok" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>