<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="399dp"
        android:layout_height="707dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="4dp"
        tools:layout_editor_absoluteY="5dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:text="FORMULARIO"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editNombre"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/nombres" />

        <EditText
            android:id="@+id/editApellidos"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/apellidos" />

        <EditText
            android:id="@+id/editEdad"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/edad" />

        <EditText
            android:id="@+id/editCorreo"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/correo" />

        <Button
            android:id="@+id/btn_location"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:drawableStart="@android:drawable/ic_menu_myplaces"
            android:text="@string/custom_location"
            app:layout_constraintBottom_toTopOf="@+id/btn_call"
            app:layout_constraintEnd_toEndOf="@+id/btn_call"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/btn_call"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.963" />

        <Button
            android:id="@+id/btn_camera"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:drawableStart="@android:drawable/ic_menu_camera"
            android:text="@string/custom_camera"
            app:layout_constraintBottom_toTopOf="@+id/btn_web"
            app:layout_constraintEnd_toEndOf="@+id/btn_web"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="@+id/btn_web"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.928" />

        <ImageView
            android:id="@+id/iv_picture"
            android:layout_width="match_parent"
            android:layout_height="247dp"
            android:contentDescription="@string/custom_camera"
            app:layout_constraintBottom_toTopOf="@+id/btn_camera"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <Button
            android:id="@+id/btnAceptar"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:text="@string/aceptar" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>